# external_syscallserver

./: CMakeLists.txt  README.md  syscall_server.c
